Fix: overflow scroll + semantic html change

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,10 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
   font-family: var(--font-mono);
 }
 
