--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -15,7 +15,6 @@
 
 .content {
   width: 100%;
-  max-width: var(--max-width);
   height: 100%;
 }
 
@@ -62,7 +61,6 @@
   transition: opacity 500ms cubic-bezier(0, 0, 0.5, 1), background-color 500ms cubic-bezier(0, 0, 0.5, 1),
     width 300ms cubic-bezier(0.24, 0.95, 0.63, 0.97);
   pointer-events: auto;
-  /* margin-left: 0.5ch; */
 }
 
 .list {
@@ -70,7 +68,14 @@
   flex-flow: row wrap;
   gap: 1.6rem;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 7.6rem - 48px);
+  overflow-y: auto;
+  scrollbar-width: none;
+  -webkit-overflow-scrolling: touch;
+}
+
+.list::-webkit-scrollbar {
+  display: none;
 }
 
 .list > * {
